# bushdump

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TODO.md  bd  pyproject.toml
bushdump/: __init__.py  __main__.py  backup.py  ble.py  camera.py  cli.py  config.py  health.py  prune.py  sync.py  validate.py  wifi.py
docs/: camera-api.md  camera-models.md
tests/: test_backup.py  test_camera.py  test_cli.py  test_config.py  test_health.py  test_prune.py  test_sync.py  test_validate.py  test_validate_fixtures.py  test_wifi.py
tests/fixtures/: make_corrupt_jpegs.py
tools/: README.md  inspect-ble.py  probe-http.py  validate-files.py  wake.py
