[project]
name = "bushdump"
version = "0.1.0"
description = "Dump photos/videos off a GardePro/Dsoon trail camera to local disk over its WiFi AP."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Andrew Hill" }]
dependencies = [
    "bleak>=0.22",
    "httpx>=0.27",
]

[project.scripts]
bushdump = "bushdump.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
